Fix styles on small screen.

--- a/src/components/ProductList/ListItem.module.css
+++ b/src/components/ProductList/ListItem.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   padding: 6px;
   display: flex;
