--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -1,6 +1,5 @@
 .wrapper {
   max-width: 1000px;
-  min-width: 400px;
   padding: 10px;
   border: 1px solid rgb(212 212 212);
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -14,4 +13,10 @@
   color: #6b7280;
   font-style: italic;
   font-size: 18px;
+}
+
+@media (min-width: 440px) {
+  .wrapper {
+    min-width: 400px;
+  }
 }
